--- a/templates/about.html
+++ b/templates/about.html
@@ -13,9 +13,9 @@
         <h1><nav><a href='/index'>Phone Camera Comparison</a></nav></h1>
         <nav>
           <ul>
-            <li><a href="{{url_for('home')}}">Home</a></li>
-            <li><a href="{{url_for('about')}}">About</a></li>
-            <li><a href="{{url_for('login')}}">Log out</a></li>
+            <li><a href="'/index'">Home</a></li>
+            <li><a href="index/about">About</a></li>
+            <li><a href="/logout">Log out</a></li>
           </ul>
         </nav>
       </header>
