--- a/templates/login.html
+++ b/templates/login.html
@@ -2,54 +2,78 @@
 <html>
   <head>
     <title>Login Page</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/login_style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
   </head>
-  <body>
-    <form method="post" action="/" class="container mt-5">
-      <div class="card p-5">
-        <h1 class="mb-4">Login</h1>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-user"></i></span>
+  <body class="bg">
+      <form method="post" action="/" class="container mt-5">
+        <div class="card p-5">
+          <h1 class="mb-4">Login</h1>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-user"></i></span>
+            </div>
+            <input
+              type="text"
+              name="username"
+              class="form-control"
+              placeholder="Username"
+            />
           </div>
-          <input type="text" name="username" class="form-control" placeholder="Username">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-key"></i></span>
+            </div>
+            <input
+              type="password"
+              name="password"
+              class="form-control"
+              placeholder="Password"
+              id="myInput"
+            />
+            <div class="input-group-append">
+              <span class="input-group-text" onclick="myFunction()">
+                <i id="hide1" class="fa fa-eye"></i>
+                <i id="hide2" class="fa fa-eye-slash"></i>
+              </span>
+            </div>
+          </div>
+          <input
+            type="submit"
+            value="Login"
+            class="btn btn-primary btn-block"
+          />
+          <p class="mt-3">
+            Not have an account?
+            <a href="{{ url_for('register') }}">Sign-up Here</a>
+          </p>
         </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fa fa-key"></i></span>
-          </div>
-          <input type="password" name="password" class="form-control" placeholder="Password" id="myInput">
-          <div class="input-group-append">
-            <span class="input-group-text" onclick="myFunction()">
-              <i id="hide1" class="fa fa-eye"></i>
-              <i id="hide2" class="fa fa-eye-slash"></i>
-            </span>
-          </div>
-        </div>
-        <input type="submit" value="Login" class="btn btn-primary btn-block">
-        <p class="mt-3">
-          Not have an account? <a href="{{ url_for('register') }}">Sign-up Here</a>
-        </p>
-      </div>
-    </form>
+      </form>
     <script>
-      function myFunction(){
-          var x = document.getElementById("myInput");
-          var y = document.getElementById("hide1");
-          var z = document.getElementById("hide2");
+      function myFunction() {
+        var x = document.getElementById("myInput");
+        var y = document.getElementById("hide1");
+        var z = document.getElementById("hide2");
 
-          if(x.type === 'password'){
-            x.type = "text";
-            y.style.display = "block";
-            z.style.display = "none";
-          }
-          else{
-            x.type = "password";
-            y.style.display = "none";
-            z.style.display = "block";
-          }
+        if (x.type === "password") {
+          x.type = "text";
+          y.style.display = "block";
+          z.style.display = "none";
+        } else {
+          x.type = "password";
+          y.style.display = "none";
+          z.style.display = "block";
+        }
       }
     </script>
   </body>
