--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/register_style.css') }}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="bg">
 	<div class="container">
 		<h1>Sign up</h1>
 		<form method = "post" action = "/register">
