--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -1,161 +1,106 @@
-body {
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    background-color: rgb(248, 245, 245);
-}
-
-.container {
-    text-align: center;
-    max-width: 1200px;
-    margin: 0px auto;
-    background-color: white;
-    box-shadow: 0 0 10px black;
-    
-}
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+
 }
 
-.flex-container>div {
-    color: black;
-    width: 375px;
-    height: auto;
+.flex-item {
+    width: 30%;
+    height: 100%;
     margin: 10px;
+    border: 1px solid #ddd;
     text-align: center;
-    line-height: 30px;
-    font-size: 30px;
-    border: 2px solid black;
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
-.text-container {
-    display: flex;
-    
-}
-.text-container>div {
-    padding-top: 100px;
-    color: black;
-    width: 500px;
-    margin: 2px;
-    text-align: center;
-    font-size: 17px;
-}
-.text-container>p
-{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-}
-#select {
-    width: 80%;
-    height: 30px;
-}
-header {
-    height: 40px;
-    background-color: #2a598a;
-    text-align: end;
-    color: #fff;
     padding: 20px;
-    display: flex;
-    justify-content: space-between;
+    box-sizing: border-box;
     align-items: center;
-    overflow: hidden;
-    position: fixed;
-    width: 98%;
-    top: 0;
-    box-shadow: 0 0 10px black;
+    border-color: black;
+
+
 }
-nav ul {
-    list-style: none;
-    display: flex;
+
+.flex-item img {
+    width: 30%;
+    height: 50%;
+    object-fit: fill;
 }
-nav li {
-    margin-right: 40px;
+
+#search {
+    width: auto;
 }
-nav a {
-    color: #fff;
-    text-decoration: none;
+
+.btn {
+    border-radius: 1px;
+    margin-left: 10px;
+    height: 10%;
+    border-radius: 70px;
+
 }
-.flex-container1 p {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 18;
+
+/* Media queries for adjusting the layout */
+@media (max-width: 991px) {
+    .flex-container {
+        flex-wrap: wrap;
+    }
+
+    .flex-item {
+        flex-basis: 70%;
+        max-width: 70%;
+    }
+}
+
+@media (max-width: 767px) {
+    .flex-item {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+}
+
+.phone {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
     text-align: center;
-}
-
-.box1 img {
-    width: 340px;
-    height: 400px;
-    margin: 15px;
-}
-
-.box2 img {
-    width: 340;
-    height: 400px;
-    margin: 15px;
-}
-
-.box3 img {
-    width: 340;
-    height: 400px;
-    margin: 15px;
-}
-
-.flex-container1 {
-    display: flex;
-    justify-content: flex-end;
-    /* background-color: white; */
-}
-
-.flex-container1>div {
-    /* background-color: DodgerBlue; */
-    background-color: rgb(254, 254, 254);
-    color: black;
-    width: 520px;
+    margin-bottom: 20px;
+  }
+  
+  .phone h2 {
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  
+  .phone img {
+    max-width: 100%;
     height: auto;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-    border: 2px solid black;
-   
-}
-
-footer {
-    width: 100%;
-    height: 4%;
-    text-align: center;
-    position: fixed;
-    padding-bottom: 5px;
-    bottom: 0;
-    left: 0;
-    background: #2a598a;
-    color: #fff;
-}
-
-footer p {
-    margin-top: 7px;
-
-}
-
-.flex-item:first-child {
-    flex: 1;
-    border-right: 1px solid black;
-}
-
-#col2 {
-    font: 12px;
-    font-family: 'Times New Roman', Times, serif;
-
-}
-
-.comp {
-    font: 50px;
-}
-
-.text {
-    font-family: 'Times New Roman', Times, serif;
-    
-}
-.spam{
-    padding-bottom: 200px;
-}
+    margin-bottom: 10px;
+  }
+  
+  .phone ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .phone li {
+    font-size: 18px;
+    padding: 5px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  /* responsive styles */
+  @media (max-width: 991.98px) {
+    .phone {
+      margin-right: 0;
+      margin-left: 0;
+    }
+  }
+  
+  @media (max-width: 767.98px) {
+    .phone {
+      margin-right: 0;
+      margin-left: 0;
+      margin-bottom: 20px;
+    }
+  }
