--- a/static/css/login_style.css
+++ b/static/css/login_style.css
@@ -2,7 +2,8 @@ body {
 	font-family: Arial, sans-serif;
 }
 .bg{
-    background-image: url('../images/login_bg.jpg');
+    background-image: -webkit-linear-gradient(top,#2a598a,#ffffff);
+    /* background-image: url('../images/login_bg.jpg'); */
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
