--- a/templates/about.html
+++ b/templates/about.html
@@ -10,11 +10,12 @@
   <body>
     <form method="post" action="{{url_for('index')}}">
       <header>
-        <h1><nav><a href='/index'>Phone Camera Comparison</a></nav></h1>
+        <h1><nav><a href="/dashboard">Phone Camera Comparison</a></nav></h1>
         <nav>
           <ul>
-            <li><a href="'/index'">Home</a></li>
-            <li><a href="index/about">About</a></li>
+            <li><a href="/dashboard">Home</a></li>
+            <li><a href="/index">Comparision</a></li> 
+            <li><a href="#">About</a></li>
             <li><a href="/logout">Log out</a></li>
           </ul>
         </nav>
