--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet"  href="{{ url_for('static', filename='css/index_style.css') }}">
     <title>Dashboard</title>
 </head>
@@ -84,93 +84,101 @@
                 }
 </script>
 <body>
-    <header>
-        <h1><nav><a href='/index'>Phone Camera Comparison</a></nav></h1>
-        <nav>
-            <ul>
-                <li><a href='/index'>Home</a></li>
-                <li><a href='index/about'>About</a></li>
-                <li><a href='/logout'>Log out</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top " style="background-color: coral;"  >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/dashboard">Phone Camera Comparision</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="input-group" id="search">
+              <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+              <button type="button" class="btn btn-success">Search</button>
+            </div>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/index">Comparision</a>
+              </li> 
+              <li class="nav-item">
+                <a class="nav-link" href="/index/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Log out</a>
+              </li> 
             </ul>
-        </nav>
-    </header>
-      </style>
-    <div class="container">
-        <div class="text-container">
-            <div class="text">
-                Phone Comparision:
-            </div>
-            <div>
-                <label for="dropdown1"></label>
-                <select id="dropdown1">
-                    {% for value in dropdown_data %}
-                        <option value="{{ value[0] }}">{{ value[0] }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div>
-                <label for="dropdown2"></label>
-                <select id="dropdown2">
-                    {% for value in dropdown_data %}
-                        <option value="{{ value[0] }}">{{ value[0] }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+          </div>
         </div>
-        <hr>
-        <div class="flex-container1">
-            <div class="box1">
-                <img src="" alt="">
-                <p>Price:</p>
-                <p>Spec Score:</p>
-                <p>Technical:</p>
-                <p>Storage:</p>
-                <p>Battery:</p>
-                <p>Display:</p>
-                <p>Camera:</p>
-                <p>OS version:</p>
-                <p>Extra:</p>
+      </nav>
+      
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="phone">
+              <h2>Filter</h2>
+              <ul>
+                <h2>Overview</h2>
+                <li>price </li>
+                <li>Specs score </li>
+                <li>network </li>
+              </ul>
             </div>
-            <div class="box2">
-                <div id="row_data"></div>
-            </div>
-            <div class="box3">
-                <div id="row_data_2"></div>
-            </div>
+          </div>
+  
+          <div class="col-md-6 col-lg-3">
+            <div class="phone">
+                <h2>Phone 1</h2>
+                <img src="{{ url_for('static', filename='images/images.jpg') }}" alt="Phone 1">
+                <ul>
+                  <li>Feature 1</li>
+                  <li>Feature 2</li>
+                  <li>Feature 3</li>
+                </ul>
+              </div>
+          </div>
+  
+          <div class="col-md-6 col-lg-3">
+            <div class="phone">
+                <h2>Phone 2</h2>
+                <img src="{{ url_for('static', filename='images/dual.jpg') }}" alt="Phone 2">
+                <ul>
+                  <li>Feature 1</li>
+                  <li>Feature 2</li>
+                  <li>Feature 3</li>
+                </ul>
+              </div>
+          </div>
+  
+          <div class="col-md-6 col-lg-3">
+            <div class="phone">
+                <h2>Phone 3</h2>
+                <img src="phone3.jpg" alt="Phone 3" />
+                <ul>
+                  <li>Feature 1</li>
+                  <li>Feature 2</li>
+                  <li>Feature 3</li>
+                </ul>
+              </div>
+          </div>
         </div>
-        <hr>
-        <div class="flex-container">
-            <div class="box1">
-            <img id="image" src="{{ url_for('static', filename='images/None.jpg') }}" name="Image_selected" />
-            </div>
-            <div class="box2">
-                <img src="{{ url_for('static', filename='images/None.jpg') }}">
-            </div>
-            <div class="box3">
-                <img src="{{ url_for('static', filename='images/None.jpg') }}">
-            </div>
+      </div>        
+    
+    <footer class="fixed-bottom">
+    <nav class="navbar navbar-default  bg-primary navbar-fixed-bottom " role="navigation">
+        <div class="container text-center">
+            <p class="navbar-text col-md-12 col-sm-12 col-xs-12">&phone; contact</p>
         </div>
-        
-        <div class="select">
-            <form method="POST" action="/index">
-                <select id="dropdown" onchange="updatePage()">
-                    <option value="None">Select an image</option>
-                    <option value="image1">Front Image</option>
-                    <option value="image2">Rear Image</option>
-                </select>
-                <input type="hidden" id="selected-image" name="selected-image" value="">
-                <form id="image-form" method="post" action="/select_image">
-                    <input id="image-input" type="hidden" name="image" value="">
-                </form>
-            </form>
-        </div>
-        <hr>
-        <div class="spam">
-
-        </div>
-    </div>
-    <footer>
-        <p>&phone; Contact</p>
+      </nav>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
     </body>
 </html>
