--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
           <h1 class="mb-4">Login</h1>
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fa fa-user"></i></span>
+              <span class="input-group-text"><i class=  "fa fa-user"></i></span>
             </div>
             <input
               type="text"
@@ -39,8 +39,7 @@
               name="password"
               class="form-control"
               placeholder="Password"
-              id="myInput"
-            />
+              id="myInput"/>
             <div class="input-group-append">
               <span class="input-group-text" onclick="myFunction()">
                 <i id="hide1" class="fa fa-eye"></i>
@@ -53,7 +52,7 @@
             value="Login"
             class="btn btn-primary btn-block"
           />
-          <p class="mt-3">
+          <p class="para-2">
             Not have an account?
             <a href="{{ url_for('register') }}">Sign-up Here</a>
           </p>
