--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top " style="background-color: coral;"  >
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top " style="background-color: #385d8a;"  >
     <div class="container-fluid">
       <a class="navbar-brand" href="/dashboard">Phone Camera Comparision</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -40,43 +40,63 @@
   </nav>
   <div class="container-fluid">
     <div class="row flex-container">
-      <div class="col-md-4 flex-item">
 
+      <div class="col-md-4 flex-item">
         <img src="front.jpg" alt="Flexbox Image 1" />
         vs
         <img src="front.jpg" alt="Flexbox Image 1" />
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
+      </div>
+
+      <div class="col-md-4 flex-item">
+        <img src="front.jpg" alt="Flexbox Image 1" />
+        vs
+        <img src="front.jpg" alt="Flexbox Image 1" />
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
+      </div>
+
+      <div class="col-md-4 flex-item">
+        <img src="front.jpg" alt="Flexbox Image 1" />
+        vs
+        <img src="front.jpg" alt="Flexbox Image 1" />
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
+
       </div>
       <div class="col-md-4 flex-item">
         <img src="front.jpg" alt="Flexbox Image 1" />
         vs
         <img src="front.jpg" alt="Flexbox Image 1" />
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
       </div>
+
       <div class="col-md-4 flex-item">
         <img src="front.jpg" alt="Flexbox Image 1" />
         vs
         <img src="front.jpg" alt="Flexbox Image 1" />
 
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
       </div>
+
       <div class="col-md-4 flex-item">
         <img src="front.jpg" alt="Flexbox Image 1" />
         vs
         <img src="front.jpg" alt="Flexbox Image 1" />
-
-      </div>
-      <div class="col-md-4 flex-item">
-        <img src="front.jpg" alt="Flexbox Image 1" />
-        vs
-        <img src="front.jpg" alt="Flexbox Image 1" />
-
-      </div>
-      <div class="col-md-4 flex-item">
-        <img src="front.jpg" alt="Flexbox Image 1" />
-        vs
-
-        <img src="front.jpg" alt="Flexbox Image 1" />
-
+        <div class="break" id="btn">
+          <button type="button" class="btn btn-success">Compare</button>
+        </div>
       </div>
     </div>
+    
   </div>
   <nav class="navbar navbar-default navbar-fixed-bottom bg-primary " role="navigation">
     <div class="container text-center">
